manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prometheus-demo-app
  labels:
    app: prometheus-demo-app
spec:
  selector:
    matchLabels:
      app: prometheus-demo-app
  template:
    metadata:
      labels:
        app: prometheus-demo-app
    spec:
      containers:
      - name: prometheus-demo-app
        image: guanwei/k8s-prometheus-custom-scaling:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "128Mi"
            cpu: "100m"
        ports:
        - containerPort: 8000
          name: http
